fix: fullscreen overflow

--- a/src/local/styles/parts/fullscreen.scss
+++ b/src/local/styles/parts/fullscreen.scss
@@ -1,9 +1,10 @@
 .fullscreen {
+	overflow: auto;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: lightblue;
 	z-index: 1000000;
+	background-color: lightblue;
 }
